# DigitalCard

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini
backend/migrations/: env.py
backend/tests/: conftest.py  test_analytics.py  test_analytics_performance.py  test_auth.py  test_backup_restore.py  test_cards.py  test_crm.py  test_employees.py  test_knowledge_ai.py  test_leads.py  test_marketing.py  test_mvp_flow.py  test_open_platform.py  test_operations.py  test_performance.py  test_products.py  test_saas.py  test_security.py  test_system.py  test_tenancy.py
deploy/nginx/: spa.conf
docs/: ANALYTICS.md  API_REFERENCE.md  AUTHENTICATION.md  CARDS_AND_TEMPLATES.md  CUSTOMERS_AND_CRM.md  DEPLOYMENT.md  EMPLOYEE_MANAGEMENT.md  H5_SHARING.md  ITERATION_REQUIREMENTS.md  KNOWLEDGE_AND_AI.md  LEADS_AND_NOTIFICATIONS.md  MARKETING.md  OPEN_PLATFORM.md  OPERATIONS.md  PRIVACY_AND_SECURITY.md  PRODUCTS_AND_MATERIALS.md  RELEASE_AND_INCIDENTS.md  SAAS_OPERATIONS.md  TENANCY_AND_PERMISSIONS.md  USER_GUIDE.md
frontend/: Dockerfile
frontend/admin/: index.html  package.json  tsconfig.app.json  tsconfig.node.json
frontend/h5/: index.html  package.json  tsconfig.app.json  vite.config.ts  (+1 more)
scripts/: __init__.py  backup.ps1  backup_restore.py  check.ps1  create-admin.ps1  dev.ps1  performance-baseline.ps1  release-check.ps1  restore.ps1  rollback.ps1  security-check.ps1  setup-pip.ps1  setup.ps1
(+135 files in other folders)
