[project]
name = "digitalcard"
version = "0.8.0"
description = "DigitalCard API service"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2",
    "fastapi>=0.115,<1",
    "pydantic-settings>=2.9,<3",
    "pwdlib[argon2]>=0.3,<1",
    "pyjwt>=2.10,<3",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.11,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings --cov=backend/src/digitalcard --cov-report=term-missing"
pythonpath = ["backend/src"]
testpaths = ["backend/tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
